--- a/src/app/components/battle-fight/battle-fight.component.html
+++ b/src/app/components/battle-fight/battle-fight.component.html
@@ -1,8 +1,45 @@
 <div class="battle-container">
-    <div class="pokemon-container" *ngFor="let pokemon of pokemons">
-        <img [src]="pokemon.image" alt="{{ pokemon.name }}" class="pokemon-image">
-        <p>{{ pokemon.name }}</p>
-        <p>HP: {{ pokemon.hp }}</p>
+    <div class="enemy-container">
+        <div class="poke-stats">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title class="title"> {{ upperFirstLetter(playerPokemon.name, false) }} </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <mat-progress-bar class="progress-bar" mode="determinate" value="100"></mat-progress-bar>
+                </mat-card-content>
+            </mat-card>
+        </div>
+        <img mat-card-image class="pokemon-image"
+        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/{{playerPokemon.id}}.gif"
+        alt="Imagem {{ playerPokemon.name }}">
+    </div>
+    <div class="pokemon-container">
+        <img mat-card-image class="pokemon-image"
+        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/back/{{playerPokemon.id}}.gif"
+        alt="Imagem {{ playerPokemon.name }}">
+        <div class="poke-stats2">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title class="title"> {{ upperFirstLetter(playerPokemon.name, false) }} </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <mat-progress-bar class="progress-bar" mode="determinate" value="100"></mat-progress-bar>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
+    <div class="player-container">
+        <div class="player-info">
+
+        </div>
+        <div class="move-set">
+            @for(move of playerSelectedMoves; track move) {
+                <mat-card class="move-name">
+                    <mat-card-content>{{ upperFirstLetter(move.name) }}</mat-card-content>
+                </mat-card>
+            }
+        </div>
     </div>
 </div>
 
