initial battle logic

--- a/src/app/components/battle-fight/battle-fight.component.html
+++ b/src/app/components/battle-fight/battle-fight.component.html
@@ -1,6 +1,6 @@
 <div class="battle-container">
     <div class="enemy-container">
-        <div class="poke-stats">
+        <div class="enemy-stats">
             <mat-card>
                 <mat-card-header>
                     <mat-card-title class="title"> {{ upperFirstLetter(playerPokemon.name, false) }} </mat-card-title>
