--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -110,10 +110,10 @@
       <input matInput (keyup)="applyFilter($event)" placeholder="Filter an item from the list" #input>
     </mat-form-field>
 
-    <table class="table-item mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows>
+    <table class="table-item mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows matSort (matSortChange)="announceSortChange($event)">
       <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ID">ID</th>
         <td mat-cell *matCellDef="let item"> {{ item.id }} </td>
       </ng-container>
 
@@ -125,13 +125,13 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">Name</th>
         <td mat-cell *matCellDef="let item"> {{ upperFirstLetter(item.name) }} </td>
       </ng-container>
 
       <!-- Cost Column -->
       <ng-container matColumnDef="cost">
-        <th mat-header-cell *matHeaderCellDef>Cost</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by value">Cost</th>
         <td mat-cell *matCellDef="let item"> {{ item.cost }} </td>
       </ng-container>
 
