--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -9,10 +9,10 @@
       <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input />
     </mat-form-field>
 
-    <table class="table-move mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows>
+    <table class="table-move mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows matSort (matSortChange)="announceSortChange($event)">
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">Name</th>
         <td mat-cell *matCellDef="let move">
           {{ upperFirstLetter(move.name) }}
         </td>
@@ -28,20 +28,14 @@
       
       <!-- Power Column -->
       <ng-container matColumnDef="power">
-        <th mat-header-cell *matHeaderCellDef>Power</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by power">Power</th>
         <td mat-cell *matCellDef="let move"> {{ move.power }} </td>
       </ng-container>
       
       <!-- Accuracy Column -->
       <ng-container matColumnDef="accuracy">
-        <th mat-header-cell *matHeaderCellDef>Accuracy</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by accuracy">Acc</th>
         <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
-      </ng-container>
-      
-      <!-- PP Column -->
-      <ng-container matColumnDef="pp">
-        <th mat-header-cell *matHeaderCellDef>PP</th>
-        <td mat-cell *matCellDef="let move"> {{ move.pp }} </td>
       </ng-container>
       
       <!-- Expand Column-->
@@ -70,6 +64,7 @@
                 {{ effect.effect }}
               </span>
               }
+              <p> PP: {{ move.pp }} </p>
             </div>
           </div>
         </td>
