--- a/src/app/components/moves/moves.component.html
+++ b/src/app/components/moves/moves.component.html
@@ -5,10 +5,10 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input />
   </mat-form-field>
-  <table class="table-move mat-elevation-z8" mat-table [dataSource]="dataSource">
+  <table class="table-move mat-elevation-z8" mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">Name</th>
       <td mat-cell *matCellDef="let move">{{ upperFirstLetter(move.name) }}</td>
     </ng-container>
 
@@ -20,13 +20,13 @@
 
     <!-- Power Column -->
     <ng-container matColumnDef="power">
-      <th mat-header-cell *matHeaderCellDef>Power</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by power">Power</th>
       <td mat-cell *matCellDef="let move"> {{ move.power }} </td>
     </ng-container>
 
     <!-- Accuracy Column -->
     <ng-container matColumnDef="accuracy">
-      <th mat-header-cell *matHeaderCellDef>Accuracy</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by accuracy">Acc</th>
       <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
     </ng-container>
 
