--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,6 +8,7 @@
       <button mat-menu-item routerLink="/pokedex">Pokedex</button>
       <button mat-menu-item routerLink="/moves">Moves</button>
       <button mat-menu-item routerLink="/items">Items</button>
+      <button mat-menu-item routerLink="/abilities">Abilities</button>
     </mat-menu>
     <button mat-button>
       <a routerLink="/home"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
