--- a/src/app/components/ability-list/ability-list.component.html
+++ b/src/app/components/ability-list/ability-list.component.html
@@ -1,5 +1,14 @@
 <div class="container">
   <div class="content">
+    @if (loading) {
+      <app-loading></app-loading>
+    }
+    <!-- Filter -->
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input />
+    </mat-form-field>
+    
     <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows matSort
       (matSortChange)="announceSortChange($event)">
       <!-- ID Column -->
