--- a/src/app/components/item-list/item-list.component.css
+++ b/src/app/components/item-list/item-list.component.css
@@ -5,14 +5,14 @@
   margin-top: 2em;
 }
 
-h1 {
-  font-size: 30px;
-  text-align: center;
-}
-
 .content {
   width: calc(100% - 4%);
   margin: 2%;
+}
+
+h1 {
+  font-size: 30px;
+  text-align: center;
 }
 
 mat-form-field {
@@ -37,6 +37,14 @@ tr.detail-row {
   height: 0;
 }
 
+tr.element-row:not(.expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.element-row:not(.expanded-row):active {
+  background: #efefef;
+}
+
 .element-row td {
   border-bottom-width: 0;
 }
@@ -49,9 +57,23 @@ tr.detail-row {
   opacity: 0.5;
 }
 
-@media (max-width: 640px) {
+.element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.expand-cell {
+  position: relative;
+}
+
+.expand-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@media (max-width: 700px) {
   .title-item {
     font-size: 20px;
   }
-  
 }
