--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="content">
     @if (loading) {
-      <app-loading></app-loading>
+    <app-loading></app-loading>
     }
     <button class="main-button" mat-raised-button color="primary" [matMenuTriggerFor]="items">
       <mat-icon>list</mat-icon>
       Items
     </button>
     @if (nameCategory) {
-      <h1 class="title-item"> {{ upperFirstLetter(nameCategory) }} </h1>
+    <h1 class="title-item"> {{ upperFirstLetter(nameCategory) }} </h1>
     }
     <mat-menu #items="matMenu">
       <button mat-menu-item [matMenuTriggerFor]="pocket">Pocket Items</button>
@@ -109,8 +109,8 @@
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Filter an item from the list" #input>
     </mat-form-field>
-
-    <table class="table-item mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows matSort (matSortChange)="announceSortChange($event)">
+    <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows matSort
+      (matSortChange)="announceSortChange($event)">
       <!-- ID Column -->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ID">ID</th>
@@ -138,11 +138,11 @@
       <!-- Expand Column-->
       <ng-container matColumnDef="expand">
         <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let item">
-          <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
+        <td mat-cell *matCellDef="let item" class="expand-cell">
+          <button mat-icon-button aria-label="expand row" class="expand-button" (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
             @if (expandedElement === item) {
               <mat-icon>keyboard_arrow_up</mat-icon>
-            } 
+            }
             @else {
               <mat-icon>keyboard_arrow_down</mat-icon>
             }
@@ -152,11 +152,11 @@
 
       <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let item" [attr.colspan]="displayedColumns.length">
+        <td mat-cell *matCellDef="let item" [attr.colspan]="columnsToDisplayWithExpand.length">
           <div class="element-detail" [@detailExpand]="item == expandedElement ? 'expanded' : 'collapsed'">
             <div class="element-description">
               @for (effect of item.effect_entries; track effect) {
-                <span class="element-description-attribution"> {{effect.effect}} </span>
+              <span class="element-description-attribution"> {{effect.effect}} </span>
               }
             </div>
           </div>
