--- a/src/app/components/nature-list/nature-list.component.css
+++ b/src/app/components/nature-list/nature-list.component.css
@@ -9,8 +9,19 @@ mat-card {
     align-items: center;
     width: calc(25% - 1%);
     margin: 0.5%;
-    min-width: 200px;
+    min-width: 250px;
     display: inline-block;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.4);
+}
+
+mat-card:hover {
+    box-shadow: 2px 3px 3px 3px #3f51b5;;
+}
+
+mat-card-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mat-mdc-card-header {
@@ -18,10 +29,51 @@ mat-card {
 }
 
 .title {
+    font-size: 25px;
     align-items: center;
 }
 
 .stats-image {
     width: 150px;
     height: auto;
+}
+
+p {
+    margin-top: 3%;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.line {
+    opacity: 25%;
+}
+
+@media(max-width: 1350px) {
+    .stats-image {
+        width: 120px;
+    }
+
+    p {
+        font-size: 17px;
+    }
+
+    .title {
+        font-size: 22px;
+    }
+}
+
+@media(max-width: 950px) {
+    .stats-image {
+        width: 100px;
+    }
+
+    p {
+        font-size: 14px;
+    }
+
+    .title {
+        font-size: 19px;
+    }
 }
