adjusting item-list loading and add header for nature component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,6 +19,7 @@
     <span [ngClass]="{'selected': selectedSpan === 'moves'}"><a mat-button routerLink="/moves" (click)="selectSpan('moves')">Moves</a></span>
     <span [ngClass]="{'selected': selectedSpan === 'items'}"><a mat-button routerLink="/items" (click)="selectSpan('items')">Items</a></span>
     <span [ngClass]="{'selected': selectedSpan === 'abilities'}"><a mat-button routerLink="/abilities" (click)="selectSpan('abilities')">Abilities</a></span>
+    <span [ngClass]="{'selected': selectedSpan === 'natures'}"><a mat-button routerLink="/natures" (click)="selectSpan('natures')">Natures</a></span>
     <span class="spacer"></span>
     <a href="https://github.com/Diagnoster/pokeapi-angular">
       <button mat-icon-button class="favorite-icon" aria-label="Favorite icon">
