--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -68,7 +68,9 @@
               @for (poke of move.learned_by_pokemon; track poke) {
                 <img class="pokemon-artwork" 
                 (click)="pokeModal(poke.name)"
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{extractPokemonId(poke.url)}}.png">
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{extractPokemonId(poke.url)}}.png"
+                (error)="handleImageError($event)"
+                matTooltip="{{poke.name}}">
               }
             </div>
           </div>
