--- a/src/app/components/move-list/move-list.component.css
+++ b/src/app/components/move-list/move-list.component.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 .pokemon-artwork:hover {
-  transform: scale(1.2);
+  transform: scale(1.3);
   cursor: pointer;
   background: lightcoral;
   border-radius: 20px;
@@ -74,4 +74,8 @@ tr.element-row:not(.expanded-row):active {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+mat-card {
+  display: table-row;
 }
